--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,21 @@
 services:
   - type: cron
-    name: car-valuation-bot
-    runtime: python-3.11
-    buildCommand: pip install -r requirements.txt
-    startCommand: python car_bot.py
-    schedule: "0 8 * * *"
+    name: car_scrap
+    runtime: python
+    schedule: "0 9 * * *"  # 9 AM UTC daily
+    buildCommand: |
+      pip install -r requirements.txt
+      apt-get update
+      apt-get install -y wget gnupg
+      wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+      echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
+      apt-get update
+      apt-get install -y google-chrome-stable
+    startCommand: python scrap_all.py
+    envVars:
+      - key: SENDER_EMAIL
+        sync: false
+      - key: SENDER_PASSWORD
+        sync: false
+      - key: RECIPIENT_EMAIL
+        sync: false
